Attestation work corrected